# single-page-app-table

./: .dockerignore  .env.sample  .gitignore  Dockerfile.backend  README.MD  conftest.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
config/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.test.js  setupTests.js
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_45085d0f808649cc___init___py.html  z_45085d0f808649cc_admin_py.html  z_45085d0f808649cc_apps_py.html  z_45085d0f808649cc_filters_py.html  z_45085d0f808649cc_models_py.html  z_45085d0f808649cc_pagination_py.html  z_45085d0f808649cc_serializers_py.html  z_45085d0f808649cc_urls_py.html  z_45085d0f808649cc_views_py.html  z_4e70917a7e05b286_0001_initial_py.html  z_4e70917a7e05b286_0002_alter_tablerow_distance_py.html  z_4e70917a7e05b286___init___py.html  z_7372d72019f65a8c___init___py.html  z_7372d72019f65a8c_test_filters_py.html  z_7372d72019f65a8c_test_models_py.html  z_7372d72019f65a8c_test_pagination_py.html  z_7372d72019f65a8c_test_serializers_py.html  z_7372d72019f65a8c_test_views_py.html  z_7ffe528d2d8ac7c6___init___py.html  z_b4335f4442e87f40___init___py.html  z_b4335f4442e87f40_autofilling_py.html
nginx/: Dockerfile.nginx  nginx.conf
scripts/: sync_secrets.py
spa/: admin.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
spa/migrations/: 0001_initial.py  (+2 more)
users/: admin.py  models.py
(+22 files in other folders)
