[project]
name = "diploma"
version = "0.1.0"
description = ""
authors = [
    {name = "Lenar Khaidarov",email = "haidarov_lenar@mail.ru"}
]
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "django (>=4.2,<5.0)",
    "djangorestframework (>=3.14,<4.0)",
    "python-dotenv (>=1.0,<2.0)",
    "psycopg2-binary (>=2.9,<3.0)",
    "black (>=23.0,<26.0)",
    "drf-yasg (>=1.21.11,<2.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-filter (<24.0)",
    "tree (>=0.2.4,<0.3.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django-debug-toolbar (>=6.1.0,<7.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "faker (>=39.0.0,<40.0.0)"
]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
